# gogolook-task

./: Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt
src/: app.py  main.py
src/task/: __init__.py  model.py  routes.py  service.py  service_test.py
