[tool.poetry]
name = "gogolook"
version = "0.1.0"
description = ""
authors = ["HowardOhMyGod <howard036060006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.3.3"
marshmallow = "3.20.1"
webargs = "8.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
